--- a/layouts/partials/extend-head.html
+++ b/layouts/partials/extend-head.html
@@ -1,4 +1,4 @@
 <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/custom.css">
-<meta name="Keywords" content="fiadino,pierdomenico fiadino,piero fiadino,data scientist,head of data,senior data scientist,data analytics,zeelo,eurecat,typeform,bitpanda,messagebird,big data,big data analytics,barcelona,phd">
+<meta name="Keywords" content="fiadino,pierdomenico fiadino,piero fiadino,data scientist,head of data,senior data scientist,data analytics,zeelo,eurecat,typeform,bitpanda,messagebird,big data,big data analytics,barcelona,engineer,computer science,data engineering,phd">
